--- a/GarageASP.NetMVC/appsettings.json
+++ b/GarageASP.NetMVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GMConnection": "Data Source=DESKTOP-MRUF07I\\SQLEXPRESS;Initial Catalog=GarageManagement;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
